refactor(user-service): clean sweep refactor to feature-based package structure